# rins-homework

./: package.xml
exercise1/: exercise1.txt
exercise1/src/: hello_world_node.cpp  publish_string_node.cpp  subscribe_string_node.cpp
exercise2/: exercise2.txt
exercise2/scripts/: movement.py
exercise3/: exercise3.txt
exercise3/launch/: amcl_simulation.launch
exercise3/maps/: map_exercise3.yaml  old_map_exercise3.pgm
exercise4/: exercise4.txt
exercise6/: exercise6.txt
exercise7/worlds/: rins.world
exercise8/launch/: amcl_simulation.launch  rins_world.launch
exercise8/scripts/: extract_qr
exercise9/FoodClassification/: test.py  train.py
homework1/: CMakeLists.txt  Readme.md  package.xml
homework1/launch/: hello_world.launch  service_client.launch  subscribe_publish.launch
homework1/scripts/: my_client.py  my_publisher.py  my_service.py  my_subscriber.py  sample_publisher.py
homework1/src/: client_node.cpp  hello_world_node.cpp  publish_msg_node.cpp  service_node.cpp  subscribe_msg_node.cpp
homework1/srv/: Array.srv  Sum.srv
homework2/: CMakeLists.txt  package.xml
homework2/launch/: move.launch  move_turtle.launch
homework2/scripts/: move.py
homework2/src/: client_node.cpp  service_node.cpp
homework2/srv/: Command.srv  MoveTurtle.srv
homework3/: CMakeLists.txt  package.xml
homework3/launch/: amcl_simulation.launch
homework3/maps/: map_temp.pgm  map_temp.yaml
homework3/src/: map_goals.cpp  map_goals_exercise.cpp
homework4/: CMakeLists.txt  config.yaml  package.xml
homework4/launch/: amcl_simulation.launch  combined.launch  homework.launch  rins_world.launch  task.launch
homework4/params/: costmap_params.yaml
homework4/scripts/: face_localizer_dnn.py  face_localizer_haar.py
homework4/src/: map_goals.cpp
homework4/worlds/: rins.world
homework6/: CMakeLists.txt  README.md  config.yaml  package.xml
homework6/launch/: amcl_simulation.launch  rins_world.launch  task.launch
homework6/maps/: map.yaml
homework6/meshes/: rins_homework6_final.dae
homework6/rviz/: config.rviz  depth_map.rviz
homework6/src/: map_goals.cpp  ring_detect.cpp
homework6/worlds/: rins.world
task1/: CMakeLists.txt  README.md  package.xml
task1/launch/: amcl_simulation.launch  combined.launch  task.launch
task1/rviz/: config.rviz
task1/scripts/: face_localizer_dnn.py  face_localizer_haar.py
task1/src/: map_goals.cpp
task2/: CMakeLists.txt  README.md  config.yaml  package copy.xml  package.xml
task2/launch/: amcl_simulation.launch  asr.launch  combined.launch  food.launch  rins_world.launch  robot.launch  task.launch
task2/maps/: normal_map.npy
task2/rviz/: config.rviz
task2/scripts/: arm_controller.py  best_foodero_model.pt  cluster_database.py  conversation.py  cylinder_detection.py  extract_qr.py  extract_speech.py  face_localizer.py  flak.py  food.py  food_classification.py  movement.py  new_movement.py  normal_map.py  park_robot.py
task2/src/: cylinder_detect.cpp  map_goals.cpp  ring_detect.cpp
task2/worlds/: rins.world  rins3.world
