<?xml version="1.0"?>
<package>
    <name>task2</name>
    <version>0.0.0</version>
    <description>The task2 package</description>

    <maintainer email="rm6551@student.uni-lj.si">mokot</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>sound_play</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>OpenCV</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>gazebo_ros</run_depend>
    <run_depend>sound_play</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl_msgs</run_depend>
    <run_depend>OpenCV</run_depend>

    <export>
        <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
        <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.." />
    </export>
</package>

